--- a/h5/buttJointDetails.html
+++ b/h5/buttJointDetails.html
@@ -20,19 +20,20 @@
 			<div class="detailsStatus">
 				<div class="colorStatus"><span>对接状态：</span>对接中</div>
 			</div>
-			
-			<div id="transformImg" class="mt_76">
-				<div class="subTitle">
-					<h3>商务对接人信息</h3>
-					<span></span>
+			<div class="transform_img_wrap" class="mt_76">
+				<div id="transformImg" class="mt_76">
+					<div class="subTitle">
+						<h3>商务对接人信息</h3>
+						<span></span>
+					</div>
+					<dl id="dockerBox">
+						<!-- <dd><span>对接人姓名：</span><div>张玉</div></dd>
+						<dd><span>联系电话：</span><div>15733223355</div></dd>
+						<dd><span>微信号码：</span><div>zai123456</div></dd>
+						<dd><span>微信昵称：</span><div>不忘初心</div></dd>
+						<dd><span>微信头像：</span><div><img src="images/img1.jpg" alt="" /></div></dd> -->
+					</dl>
 				</div>
-				<dl id="dockerBox">
-					<!-- <dd><span>对接人姓名：</span><div>张玉</div></dd>
-					<dd><span>联系电话：</span><div>15733223355</div></dd>
-					<dd><span>微信号码：</span><div>zai123456</div></dd>
-					<dd><span>微信昵称：</span><div>不忘初心</div></dd>
-					<dd><span>微信头像：</span><div><img src="images/img1.jpg" alt="" /></div></dd> -->
-				</dl>
 			</div>
 			<div class="m-img-tip"><img src="images/3-7cabcun.png"/></div>
 			
@@ -53,7 +54,7 @@
 			</dl>
 		</div>
 			
-			
+		<script type="text/javascript" src="js/html2canvas.min.js"></script>
 		<script type="text/javascript">
 			//对象化查询参数
 			function GetRequest() {
@@ -90,6 +91,7 @@
 			}
 
 			function createDockerHtml(docker){
+				var transformImg = $('#transformImg');
 				var dockerBox = $('#dockerBox');
 				var html = [
 					'<dd><span>对接人姓名：</span><div>'+docker.realname+'</div></dd>',
@@ -99,10 +101,12 @@
 					'<dd><span>微信头像：</span><div><img src="'+docker.avator+'" alt="" /></div></dd>'
 				].join('');
 				dockerBox.html(html);
+				html2canvas(transformImg[0]).then(function(canvas) {
+					 var imgUri = canvas.toDataURL("image/png").replace("image/png", "image/octet-stream"); 
+					 transformImg.html('<img src="'+imgUri+'" style="width:100%;"/>');
+				});
 			}
 
-
-			
 			
 			$.ajax({
 		        url: 'http://yichuanglian.huimor.com/index/DetailMessage',
