--- a/h5/index.html
+++ b/h5/index.html
@@ -7,6 +7,7 @@
 	<title>易创链</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 	<script src="js/jquery.1.11.3.min.js"></script>
+	<script src="js/store.js"></script>
 	<script src="js/common.js?a=11" type="text/javascript" charset="utf-8"></script>
 </head>
 	<body>
@@ -64,7 +65,7 @@
 		</div>
 		<!--底部-->
 		<footer>
-			<div class="enter"><a href="enter.html"><span><img src="images/1-0ljrzhu.png" alt="" /><p>立即入驻</p></span></a></div>
+			<div class="enter" style="display: none;"><a href="enter.html"><span><img src="images/1-0ljrzhu.png" alt="" /><p>立即入驻</p></span></a></div>
 			<div class="bottom">
 				<div class="active">
 					<a href="#">
@@ -89,6 +90,14 @@
 	<script src="js/t3.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/home.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript">
+		$(function(){
+			var loginStatus = store.get('user').login;
+			if(loginStatus){
+				$('.enter').hide();
+			}else{
+				$('.enter').show();
+			}
+		})
 	</script>
 	</body>
 </html>
