--- a/h5/setting.html
+++ b/h5/setting.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css"/>
 		<script src="js/jquery.1.11.3.min.js"></script>
 		<script src="js/myAlert.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/store.js"></script>
 		<script src="js/common.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
@@ -27,8 +28,8 @@
 			        type:'get',
 			        dataType:'json',
 			        success:function(data){
-			        	console.log(data)
 			        	if(isLogin(data)){
+			        		store.remove('user');
 		        			window.location.href='login.html'
 			           	}	
 			        }
