--- a/h5/buttJointDetails.html
+++ b/h5/buttJointDetails.html
@@ -21,7 +21,7 @@
 				<div class="colorStatus"><span>对接状态：</span>对接中</div>
 			</div>
 			<div class="transform_img_wrap" class="mt_76">
-				<div id="transformImg" class="mt_76">
+				<div id="transformImg">
 					<div class="subTitle">
 						<h3>商务对接人信息</h3>
 						<span></span>
