--- a/h5/index.html
+++ b/h5/index.html
@@ -91,8 +91,9 @@
 	<script src="js/home.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript">
 		$(function(){
-			var loginStatus = store.get('user').login;
-			if(loginStatus){
+			var user = store.get('user') ;
+			console.log(user);
+			if(user && user.login){
 				$('.enter').hide();
 			}else{
 				$('.enter').show();
