--- a/h5/changePwd.html
+++ b/h5/changePwd.html
@@ -92,21 +92,21 @@
 					var reg = /^[A-Za-z0-9]{6,12}$/;
 					if(pwd==''){
 						$.toastTip({
-							img:'images/4-3gxfkui.png',
+							img:'images/3-10myxxi.png',
 							imgW:'1.56rem',
 							imgH:'1.5rem',
 							text:['密码不正确']
 						});
 					} else if(!reg.test(pwd)){
 						$.toastTip({
-							img:'images/4-3gxfkui.png',
+							img:'images/3-10myxxi.png',
 							imgW:'1.56rem',
 							imgH:'1.5rem',
 							text:['密码格式不正确']
 						});
 					} else if(code==''){
 						$.toastTip({
-							img:'images/4-3gxfkui.png',
+							img:'images/3-10myxxi.png',
 							imgW:'1.56rem',
 							imgH:'1.5rem',
 							text:['验证码不正确']
@@ -142,3 +142,5 @@
 		</script>
 	</body>
 </html>
+
+
