--- a/h5/salesInfo.html
+++ b/h5/salesInfo.html
@@ -17,29 +17,35 @@
 				<span></span>
 			</div>
 			<dl id="baseInfo">
-		<!-- 		<dd><span>项目名称：</span><div>不忘初心</div></dd>
+				<!-- 		
+				<dd><span>项目名称：</span><div>不忘初心</div></dd>
 				<dd><span>实际合同金额：</span><div>￥1000.00</div></dd>
 				<dd><span>实际提成比例：</span><div>10%</div></dd>
 				<dd><span>个人所得分销总金额：</span><div>￥1000.00</div></dd>
 				<dd><span>已支付分销金额：</span><div>￥500.00</div></dd>
 				<dd><span>支付时间：</span><div>2017-12-12 12:09</div></dd>
-				<dd><span>我的上级所得总分销金额：</span><div>￥300.00</div></dd> -->
+				<dd><span>我的上级所得总分销金额：</span><div>￥300.00</div></dd>
+				 -->
 			</dl>
 		</div>
-		<div id="transformImg">
+		<div class="transform_img_wrap">
+			<div id="transformImg">
 				<div class="subTitle">
 					<h3>分销商信息</h3>
 					<span></span>
 				</div>
 				<dl id="salesMan">
-					<!-- <dd><span>分销商姓名：</span><div>张玉</div></dd>
+					<!-- 
+					<dd><span>分销商姓名：</span><div>张玉</div></dd>
 					<dd><span>与我的关系：</span><div>我的上级分销商</div></dd>
 					<dd><span>联系电话：</span><div>15733223355</div></dd>
 					<dd><span>微信号码：</span><div>zai123456</div></dd>
 					<dd><span>微信昵称：</span><div>不忘初心</div></dd>
-					<dd><span>微信头像：</span><div><img src="images/img1.jpg" alt="" /></div></dd> -->
+					<dd><span>微信头像：</span><div><img src="images/img1.jpg" alt="" /></div></dd>
+					-->
 				</dl>
 			</div>
+		</div>
 	</body>
 </html>
 <script type="text/javascript">
