--- a/h5/buttJointDetails.html
+++ b/h5/buttJointDetails.html
@@ -20,7 +20,7 @@
 			<div class="detailsStatus">
 				<div class="colorStatus"><span>对接状态：</span>对接中</div>
 			</div>
-			<div class="transform_img_wrap" class="mt_76">
+			<div class="transform_img_wrap mt_76">
 				<div id="transformImg">
 					<div class="subTitle">
 						<h3>商务对接人信息</h3>
@@ -35,7 +35,9 @@
 					</dl>
 				</div>
 			</div>
-			<div class="m-img-tip"><img src="images/3-7cabcun.png"/></div>
+			<div class="m-img-tip">
+				<span class="img_tip_i"></span><em class="text_tip">长按图片保存至本地相册</em>
+			</div>
 			
 			<div class="subTitle">
 				<h3>线索基本信息</h3>
