--- a/h5/buttJointError.html
+++ b/h5/buttJointError.html
@@ -22,7 +22,7 @@
 				<div id="reason"></div>
 			</div>
 				
-			<div class="transform_img_wrap" class="mt_76">
+			<div class="transform_img_wrap mt_76">
 				<div id="transformImg" >
 					<div class="subTitle">
 						<h3>商务对接人信息</h3>
@@ -38,7 +38,9 @@
 				</div>
 			</div>
 			
-			<div class="m-img-tip"><img src="images/3-7cabcun.png"/></div>
+			<div class="m-img-tip">
+				<span class="img_tip_i"></span><em class="text_tip">长按图片保存至本地相册</em>
+			</div>
 			
 			<div class="subTitle">
 				<h3>线索基本信息</h3>
