--- a/h5/dataDetails.html
+++ b/h5/dataDetails.html
@@ -27,7 +27,9 @@
 				</dl>
 			</div>
 		</div>
-		<div class="m-img-tip"><img src="images/3-7cabcun.png"/></div>
+		<div class="m-img-tip">
+			<span class="img_tip_i"></span><em class="text_tip">长按图片保存至本地相册</em>
+		</div>
 	<!-- 	<div class="dataDetails-btn"><button id="saveLocalBtn">保存到本地</button></div> -->
 	</body>
 </html>
