--- a/h5/myCode.html
+++ b/h5/myCode.html
@@ -17,7 +17,9 @@
 			<div>个人二维码：<span>分享二维码发展属于个人的二级分销商</span></div>
 			<img id="erwei" src="http://yichuanglian.huimor.com/index/createTwoCode" alt="" />
 		</div>
-		<div class="m-img-tip"><img src="images/3-3cabcun.png" alt="" /></div>
+		<div class="m-img-tip">
+			<span class="img_tip_i"></span><em class="text_tip">长按二维码可保存至本地相册</em>
+		</div>
 		<div class="myCode-btn" id="shareBtn"><button>发展二级分销商</button></div>
 	</body>
 	<script type="text/javascript">
