--- a/h5/buttJointSuccess.html
+++ b/h5/buttJointSuccess.html
@@ -38,8 +38,8 @@
 			</div>
 		</div>
 		
-		<div class="transform_img_wrap" class="mt_76">
-			<div id="transformImg">
+		<div class="transform_img_wrap mt_76">
+			<div id="transformImg" >
 				<div class="subTitle">
 					<h3>商务对接人信息</h3>
 					<span></span>
@@ -53,7 +53,9 @@
 				</dl>
 			</div>
 		</div>
-		<div class="m-img-tip"><img src="images/3-7cabcun.png"/></div>
+		<div class="m-img-tip">
+			<span class="img_tip_i"></span><em class="text_tip">长按图片保存至本地相册</em>
+		</div>
 		
 		<div class="subTitle">
 			<h3>线索基本信息</h3>
@@ -140,6 +142,7 @@
 
 			function createDockerHtml(docker){
 				var transformImg = $('#transformImg');
+				var transform_img_wrap = $('.transform_img_wrap');
 				var dockerBox = $('#dockerBox');
 				var html = [
 					'<dd><span>对接人姓名：</span><div>'+docker.realname+'</div></dd>',
@@ -150,8 +153,10 @@
 				].join('');
 				dockerBox.html(html);
 				html2canvas(transformImg[0]).then(function(canvas) {
+					 //transform_img_wrap.css('visibility','visible');
 					 var imgUri = canvas.toDataURL("image/png").replace("image/png", "image/octet-stream"); 
 					 transformImg.html('<img src="'+imgUri+'" style="width:100%;"/>');
+					
 				});
 			}
 
