--- a/h5/share.html
+++ b/h5/share.html
@@ -49,7 +49,9 @@
 			</div>
 			<div class="m-img"><img src="images/1-fgx.png" alt="" /></div>
 			<div class="m-code" ><img id="erwei" src="images/code.png" alt="" /></div>
-			<div class="m-img-tip"><img src="images/4-4casbie.png"/></div>
+			<div class="m-img-tip">
+				<span class="img_tip_i"></span><em class="text_tip">长按识别二维码</em>
+			</div>
 		</div>
 	<script src="js/t3.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/home.js" type="text/javascript" charset="utf-8"></script>
