--- a/h5/successRelease.html
+++ b/h5/successRelease.html
@@ -31,9 +31,12 @@
 					</dl>
 				</div>
 			</div>
-			<div class="m-img-tip"><img src="images/3-7cabcun.png"/></div>
+			<div class="m-img-tip">
+				<span class="img_tip_i"></span><em class="text_tip">长按图片保存至本地相册</em>
+			</div>
 			<div class="btn"><a href="myRelease.html">确定</a><a href="javascript:;" class="shareBtn">发展二级分销商</a></div>
 		</div>
+		<script type="text/javascript" src="js/html2canvas.min.js"></script>
 		<script type="text/javascript">
 			$.developSecondSales(); //发展二级分销微信配置
 			$.ajax({
@@ -48,12 +51,18 @@
 				},  
 		        success:function(data){
 		        	if(isLogin(data)){
+		        		var transformImg = $('#transformImg');
 		        		var data=data.data;
 		        		$('.realname').text(data.realname)
 		        		$('.username').text(data.username)
 		        		$('.wxname').text(data.wxname)
 		        		$('.wxnumber').text(data.wxnumber)
-		        		$('.avator img').attr('src',data.avator)
+		        		$('.avator img').attr('src',data.avator);
+
+		        		html2canvas(transformImg[0]).then(function(canvas) {
+							 var imgUri = canvas.toDataURL("image/png").replace("image/png", "image/octet-stream"); 
+							 transformImg.html('<img src="'+imgUri+'" style="width:100%; height:auto;"/>');
+						});
 		        	}
 		        }
 		    });
