--- a/h5/index.html
+++ b/h5/index.html
@@ -51,7 +51,7 @@
 			<div class="m-img"><img src="images/1-fgx.png" alt="" /></div>
 			<!--公司介绍-->
 			<div class="subTitle">
-				<h3>公司介绍</h3>
+				<h3 id="gsjieshao">公司介绍</h3>
 				<span></span>
 			</div>
 			<div class="m-article">
@@ -97,6 +97,10 @@
 			}else{
 				$('.enter').show();
 			}
+
+			$('#gsjieshao').click(function(){
+				location.href="http://www.huimor.com/"
+			})
 		})
 	</script>
 	</body>
