--- a/h5/payTurnover.html
+++ b/h5/payTurnover.html
@@ -207,7 +207,7 @@
 	        		if(data.data){ //证明有下级
 	        			hasLow = true;
 	        		} else { //没有下级
-	        			hasLow = true;
+	        			hasLow = false;
 	        		}
 	        		excuteAjax(type);
 	        	}
