--- a/h5/buttJointSuccess.html
+++ b/h5/buttJointSuccess.html
@@ -95,7 +95,7 @@
 
 			function showUpLevelInfo(hasUpLevel,data){
 				var html = "";
-				data && data.proportion_money = data && data.proportion_money ? '￥'+data.proportion_money: "";
+				var proportion_money = data && data.proportion_money ? "￥"+data.proportion_money :"";
 				if(!hasUpLevel){
 					$('#upLevelInfo').html('');
 					$('#upLevelInfoWrap').hide();
@@ -103,7 +103,7 @@
 					html = [
 						'<img id="upperImg" src="'+data.avator+'" alt="" style="height:50px; width:50px;" />',
 						'<span id="nickName">'+(data.upname||"")+'</span>',
-						'<div id="percentageMoney">提成金额：'+data.proportion_money+'</div>'
+						'<div id="percentageMoney">提成金额：'+proportion_money+'</div>'
 					].join('');
 					$('#upLevelInfo').html(html);
 					$('#upLevelInfoWrap').show();
