--- a/h5/buttJointError.html
+++ b/h5/buttJointError.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<title>线索详情</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css"/>
+	<link rel="stylesheet" type="text/css" href="css/style.css?t=1"/>
 	<script src="js/jquery.1.11.3.min.js"></script>
 	<script src="js/common.js" type="text/javascript" charset="utf-8"></script>
 </head>
