--- a/h5/salesInfo.html
+++ b/h5/salesInfo.html
@@ -266,7 +266,7 @@
 						user_id:userId
 					}
 				},function(data){
-					joinSecondInfoNotPayBase(data.mycluedetail[0],data.user);
+					joinSecondInfoNotPayBase(data.mydowncluedetail[0],data.user);
 				});
 			}
 		}
