--- a/h5/buttJointError.html
+++ b/h5/buttJointError.html
@@ -122,22 +122,24 @@
 				},
 				data:GetRequest(),
 		        success:function(data){
-		        	if(data.code==1){
-		        		var data = data.data;
-		        		var docker = data.docker; //对接人信息
-		        		var clues = data.clues; //线索基本信息
-		        		var reason = data.reason;
-		        		$('#reason').html('<span>失败原因：</span>'+reason+'。');
-		        		createCluesHtml(clues);
-		        		createDockerHtml(docker);
-		        	}else{
-        		      	$.toastTip({
-							img:'images/4-3gxfkui.png',
-							imgW:'1.56rem',
-							imgH:'1.5rem',
-							text:[data.msg]
-						});
-		        	}
+		        	if(isLogin(data)){
+			        	if(data.code==1){
+			        		var data = data.data;
+			        		var docker = data.docker; //对接人信息
+			        		var clues = data.clues; //线索基本信息
+			        		var reason = data.reason;
+			        		$('#reason').html('<span>失败原因：</span>'+reason+'。');
+			        		createCluesHtml(clues);
+			        		createDockerHtml(docker);
+			        	}else{
+	        		      	$.toastTip({
+								img:'images/4-3gxfkui.png',
+								imgW:'1.56rem',
+								imgH:'1.5rem',
+								text:[data.msg]
+							});
+			        	}
+			        }
 		        }
 			});
 
