--- a/h5/dataDetails.html
+++ b/h5/dataDetails.html
@@ -76,28 +76,30 @@
 				withCredentials:true
 			},  
 	        success:function(data){
-	        	if(data.code==1){
-	        		var data = data.data;
-	        		data.wxnumber = data.wxnumber ? data.wxnumber : "";
-	        		data.level = up == '1' ? "我的上级分销商" : "我的下级分销商"
-	        		data.wximage = data.wximage ? data.wximage : defaultHead
-	        		var html = [
-	        			'<dd><span>分销商姓名：</span><div>'+(data.username || "")+'</div></dd>',
-						'<dd><span>与我的关系：</span><div>'+data.level+'</div></dd>',
-						'<dd><span>联系电话：</span><div>'+(data.mobile || "")+'</div></dd>',
-						'<dd><span>微信号码：</span><div>'+(data.wxnumber || "")+'</div></dd>',
-						'<dd><span>微信昵称：</span><div>'+(data.wxname || "")+'</div></dd>',
-						'<dd><span>微信头像：</span><div><img src="'+data.wximage+'" alt="'+data.level+'头像" onerror="javascript:this.src='+defaultHead+';" /></div></dd>'
-	        		];
-	        		$('#values').html(html);
-	        		var newData = generateInfo(data);
-	
-	        		var transformImg = $('#transformImg');
-	        		html2canvas(transformImg[0]).then(function(canvas) {
-						 var imgUri = canvas.toDataURL("image/png").replace("image/png", "image/octet-stream"); 
-						 transformImg.html('<img src="'+imgUri+'" style="width:100%;"/>');
-					});
-	        	}
+	        	if(isLogin(data)){
+		        	if(data.code==1){
+		        		var data = data.data;
+		        		data.wxnumber = data.wxnumber ? data.wxnumber : "";
+		        		data.level = up == '1' ? "我的上级分销商" : "我的下级分销商"
+		        		data.wximage = data.wximage ? data.wximage : defaultHead
+		        		var html = [
+		        			'<dd><span>分销商姓名：</span><div>'+(data.username || "")+'</div></dd>',
+							'<dd><span>与我的关系：</span><div>'+data.level+'</div></dd>',
+							'<dd><span>联系电话：</span><div>'+(data.mobile || "")+'</div></dd>',
+							'<dd><span>微信号码：</span><div>'+(data.wxnumber || "")+'</div></dd>',
+							'<dd><span>微信昵称：</span><div>'+(data.wxname || "")+'</div></dd>',
+							'<dd><span>微信头像：</span><div><img src="'+data.wximage+'" alt="'+data.level+'头像" onerror="javascript:this.src='+defaultHead+';" /></div></dd>'
+		        		];
+		        		$('#values').html(html);
+		        		var newData = generateInfo(data);
+		
+		        		var transformImg = $('#transformImg');
+		        		html2canvas(transformImg[0]).then(function(canvas) {
+							 var imgUri = canvas.toDataURL("image/png").replace("image/png", "image/octet-stream"); 
+							 transformImg.html('<img src="'+imgUri+'" style="width:100%;"/>');
+						});
+		        	}
+		        }
 	        }
 		});
 	})
