--- a/h5/systemMessages.html
+++ b/h5/systemMessages.html
@@ -75,11 +75,11 @@
 			}, 
 	        dataType:'json',
 	        success:function(data){
-
-	        	if(data.code==1){
-	        		joinHtml(data.data);
-	        	}
-	  
+	        	if(isLogin(data)){
+		        	if(data.code==1){
+		        		joinHtml(data.data);
+		        	}
+		        }
 	        }
 	    });
 	})
