--- a/h5/setting.html
+++ b/h5/setting.html
@@ -28,7 +28,7 @@
 			        dataType:'json',
 			        success:function(data){
 			        	if(isLogin(data)){
-			        		store.remove('user');
+			        		//store.remove('user');
 		        			window.location.href='login.html'
 			           	}	
 			        }
