--- a/h5/login.html
+++ b/h5/login.html
@@ -71,7 +71,7 @@
 					withCredentials:true 
 				},  
 				success:function(data){
-		        	if(data.code!=1001){
+		        	if(!!data.data){
 		        		location.href="index.html"
 		        	}
 		        }
