--- a/h5/feedback.html
+++ b/h5/feedback.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<title>成功入驻</title>
+	<title>意见反馈</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 	<script src="js/jquery.1.11.3.min.js"></script>
 	<script src="js/common.js" type="text/javascript" charset="utf-8"></script>
